force-app/main/default/objects/Incentive_Change_Event__c/Incentive_Change_Event__c.object-meta.xml
<CustomObject>
    <description>Captures change events across incentive objects for audit trail and notification purposes.</description>
    <label>Incentive Change Event</label>
    <nameField>
        <displayFormat>ICE-{000000}</displayFormat>
        <label>Incentive Change Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Change Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>