force-app/main/default/objects/Incentive_Change_Event__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Status_Change</fullName><default>false</default><label>Status Change</label></value>
            <value><fullName>Rate_Override</fullName><default>false</default><label>Rate Override</label></value>
            <value><fullName>Quota_Adjustment</fullName><default>false</default><label>Quota Adjustment</label></value>
            <value><fullName>Calculation_Processed</fullName><default>false</default><label>Calculation Processed</label></value>
            <value><fullName>Draw_Created</fullName><default>false</default><label>Draw Created</label></value>
            <value><fullName>Template_Cloned</fullName><default>false</default><label>Template Cloned</label></value>
            <value><fullName>Plan_Accepted</fullName><default>false</default><label>Plan Accepted</label></value>
            <value><fullName>Plan_Terminated</fullName><default>false</default><label>Plan Terminated</label></value>
            <value><fullName>Reprocessing</fullName><default>false</default><label>Reprocessing</label></value>
            <value><fullName>Role_Switch</fullName><default>false</default><label>Role Switch</label></value>
            <value><fullName>Participant_Exit</fullName><default>false</default><label>Participant Exit</label></value>
            <value><fullName>Bulk_Quota_Adjustment</fullName><default>false</default><label>Bulk Quota Adjustment</label></value>
            <value><fullName>COMMISSION_HOLD_APPLIED</fullName><default>false</default><label>Commission Hold Applied</label></value>
            <value><fullName>COMMISSION_HOLD_RELEASED</fullName><default>false</default><label>Commission Hold Released</label></value>
            <value><fullName>COMMISSION_HOLD_EXPIRED</fullName><default>false</default><label>Commission Hold Expired</label></value>
            <value><fullName>MANUAL_ADJUSTMENT_CREATED</fullName><default>false</default><label>Manual Adjustment Created</label></value>
            <value><fullName>MANUAL_ADJUSTMENT_REVERSED</fullName><default>false</default><label>Manual Adjustment Reversed</label></value>
            <value><fullName>MANUAL_OVERRIDE_APPLIED</fullName><default>false</default><label>Manual Override Applied</label></value>
            <value><fullName>CLAWBACK_CREATED</fullName><default>false</default><label>Clawback Created</label></value>
            <value><fullName>CLAWBACK_REVERSED</fullName><default>false</default><label>Clawback Reversed</label></value>
            <value><fullName>REVERSAL_CREATED</fullName><default>false</default><label>Reversal Created</label></value>
            <value><fullName>INVALIDATION_IMPACT_RESOLVED</fullName><default>false</default><label>Invalidation Impact Resolved</label></value>
            <value><fullName>INVALIDATION_NO_IMPACT</fullName><default>false</default><label>Invalidation No Impact</label></value>
            <value><fullName>INVALIDATION_PROJECTED_RECALC</fullName><default>false</default><label>Invalidation Projected Recalc</label></value>
            <value><fullName>INVALIDATION_RECALC_FAILED</fullName><default>false</default><label>Invalidation Recalc Failed</label></value>
            <value><fullName>PERIOD_FROZEN_RECLASSIFICATION</fullName><default>false</default><label>Period Frozen Reclassification</label></value>
            <value><fullName>PERIOD_FREEZE_RECLASSIFICATION</fullName><default>false</default><label>Period Freeze Reclassification</label></value>
            <value><fullName>REVENUE_RECOGNITION_EVENT</fullName><default>false</default><label>Revenue Recognition Event</label></value>
            <value><fullName>REV_REC_SCHEDULE_INVALIDATED</fullName><default>false</default><label>Rev Rec Schedule Invalidated</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>