force-app/main/default/objects/Incentive_Change_Event__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <label>Changed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Incentive Changes</relationshipLabel>
    <relationshipName>Incentive_Changes</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>