force-app/main/default/objects/Incentive_Change_Event__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <label>Old Value</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>