force-app/main/default/objects/Incentive_Change_Event__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>